fixed header spilling off the edge of screen, added some media queries for card sizes, added folder for Project listg

--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,12 +1,10 @@
 header {
-    display: flex;
-    justify-content: space-between;
     color: black;
     background-color: beige;
     padding: 1rem;
 }
 
 .name {
-    margin: 2rem;
-    padding: 2rem;
+    margin: 1rem;
+    padding: 1rem;
 }
