--- a/src/components/Navigation/index.css
+++ b/src/components/Navigation/index.css
@@ -1,3 +1,3 @@
-/* a:hover {
-    background-color: black;
-} */
+nav {
+    width: 100%;
+}
